--- a/Public/dark mood.html
+++ b/Public/dark mood.html
@@ -36,7 +36,7 @@
     <a href="./dark mood contact.html"> Contact Me</a>
     <p id="last"> Copyright claim @
         <br />
-        <a href="../light mood.html"> Light Mood </a>
+        <a href="../index.html"> Light Mood </a>
         <br />
         <a href="./dark mood.html"> Dark Mood </a>
     </p>
