--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body> 
     <h1> M.Mustafa </h1>
     <hr />
-    <a href="./Public/about.html"><img src="./asserts/work.jpg" alt="A boy standing in black jacket" />
+    <a href="./Public/about.html"><h1>About Me</h1>
     </a>
     <h2> Education </h2>
  
